[package]
name = "async-rayon"
version = "0.1.0"
authors = ["Andy Barron <andrewlbarron@gmail.com>", "Arvin Kushwaha <arvin.singh.kushwaha@gmail.com>"]
edition = "2018"
description = "Mix async code with CPU-heavy thread pools using Futures + Rayon"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ArvinSKushwaha/tokio-rayon"
keywords = ["futures", "rayon", "async", "thread-pool"]
categories = ["asynchronous", "concurrency", "rust-patterns"]

[dependencies]
futures = "0.3"
rayon = "1"

[dev-dependencies]
tokio-test = "0.4.1"

[dev-dependencies.tokio]
version = "1.4.0"
default-features = false
features = ["sync", "macros", "rt", "time", "rt-multi-thread"]
